--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,12 @@ I've left some boilerplate below for you.
 */
 
 body {
-
+	text-align: center;
 }
 
 article {
-
+	max-width: 60em;
+    margin: 0 auto;
 }
 
 h1 {
@@ -25,5 +26,5 @@ h1 {
 }
 
 img {
-
+	max-width: 100%;
 }
